realizo correcciones de segunda entrega en codigo

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </head>
 <body>
     <header>
-            <nav class="navbar navbar-expand-lg" style="background-color: #41C083;">
+            <nav class="navbar navbar-expand-lg">
                     <a class="navbar-brand" href="#">
-                        <img src="./images/logoConFondo.png" alt="Bootstrap" width="70" height="70">
+                        <img src="./images/logoConFondo.png" alt="Bootstrap">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -71,15 +71,15 @@
                         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
                     </div>
-                    <div class="carousel-inner">
+                    <div class="carousel-inner imgCa">
                         <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="./images/productos/bebidasCards/1.png" alt="producto vainilla" width="540" height="810" class="img-fluid">
+                            <img src="./images/productos/bebidasCards/1.png" alt="producto vainilla" class="img-fluid">
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
-                        <img src="./images/productos/bebidasCards/2.png" alt="producto frutilla" width="540" height="810" class="img-fluid">
+                            <img src="./images/productos/bebidasCards/2.png" alt="producto frutilla" class="img-fluid">
                         </div>
                         <div class="carousel-item">
-                        <img src="./images/productos/bebidasCards/3.png"  alt="producto sandia" width="540" height="810" class="img-fluid">
+                            <img src="./images/productos/bebidasCards/3.png"  alt="producto sandia" class="img-fluid">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -100,10 +100,10 @@
         </div>
     </div>
     <footer>
-        <div class="container-fluid mb-0" style="background-color: #41C083;">
+        <div class="container-fluid mb-0">
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-2 border-top">
             <p class="col-md-4 mb-0 text-light">© 2022 Gymbucks, Inc</p>
-            <img src="./images/logoConFondo.png" alt="logo" style="width: 100px; height: 100px;">
+            <img src="./images/logoConFondo.png" alt="logo">
             <ul class="nav col-md-4 justify-content-center">
                 <li class="nav-item"><a class="nav-link text-light link-dark" aria-current="page" href="#">Home</a></li>
                 <li class="nav-item"><a class="nav-link text-light link-dark" href="./pages/about.html">Sobre Nosotros</a></li>
