--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -14,9 +14,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg" style="background-color: #41C083;">
+        <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="#">
-                    <img src="../images/logoConFondo.png" alt="Bootstrap" width="70" height="70">
+                    <img src="../images/logoConFondo.png" alt="Bootstrap">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -68,10 +68,10 @@
         </div>
     </section>
     <footer>
-        <div class="container-fluid mb-0" style="background-color: #41C083;">
+        <div class="container-fluid mb-0">
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-2 border-top">
             <p class="col-md-4 mb-0 text-light">© 2022 Gymbucks, Inc</p>
-            <img src="../images/logoConFondo.png" alt="logo" style="width: 100px; height: 100px;">
+            <img src="../images/logoConFondo.png" alt="logo">
             <ul class="nav col-md-4 justify-content-center">
                 <li class="nav-item"><a class="nav-link text-light link-dark" href="../index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link text-light link-dark" href="./about.html">Sobre Nosotros</a></li>
