corrijo el uso de IDs

--- a/pages/shop.html
+++ b/pages/shop.html
@@ -21,7 +21,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link text-light link-dark" href="../index.html">Home</a>
@@ -55,7 +55,7 @@
             <div class="row">
                 <!-- Single Product -->
                 <div class="col-md-4">
-                        <div id="product-3" class="single-product">
+                        <div class="product-3 single-product ">
                                 <div class="part-1">
                                 </div>
                                 <div class="part-2">
@@ -67,7 +67,7 @@
                 </div>
                 <!-- Single Product -->
                 <div class="col-md-4">
-                        <div id="product-4" class="single-product">
+                        <div class="product-4 single-product">
                                 <div class="part-1">
                                         <span class="new">new</span>
                                 </div>
@@ -79,7 +79,7 @@
                 </div>
                 <!-- Single Product -->
                 <div class="col-md-4">
-                        <div id="product-1" class="single-product">
+                        <div class="product-1 single-product">
                                 <div class="part-1">
                                 </div>
                                 <div class="part-2">
