realizo todo lo necesario para ultima entrega

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Bebidas saludables, entrenamiento, sobre nosotros, gymbucks, salud">
+    <meta name="description" content="¿Qué es Gymbucks? Ingresá y conocenos.">
+
     <title>Sobre Nosotros GYMBUCKS</title>
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/booststyle.css">
     <!-- STYLESHEET -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../sass/main.css">
 </head>
 <body>
     <header>
@@ -46,7 +49,7 @@
         <div class="container my-5 fullH">
             <div class="row">
                 <div class="col-md-12 mb-5">
-                    <h1>GYMBUCKS</h1>
+                    <h1>Sobre Nosotros</h1>
                 </div>
             <div class="row">
                 <div class="col-md-6">
@@ -55,7 +58,9 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos veritatis repellat et laborum sunt suscipit ut, accusantium id, corporis fugit quod consequuntur, pariatur quibusdam dolores totam cum ducimus voluptate impedit?Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos veritatis repellat et laborum sunt suscipit ut, accusantium id, corporis fugit quod consequuntur, pariatur quibusdam dolores totam cum ducimus voluptate impedit?</p>
+                    <p> Bienvenido al mundo de las bebidas más deliciosas y saludables.</p>
+                    <p>Hemos creado una línea única y deliciosa de bebidas pensando en la salud y la felicidad. Ya sea que esté haciendo ejercicio en el gimnasio o simplemente tratando de vencer a su jefe, tenemos algo para usted.</p>
+                    <p>Te dejamos un video motivacional para tus días de entrenamiento así, con la complementación de nuestras bebidas, estarás listo para todo.</p>
                 </div>
             </div>
             </div>
