--- a/pages/faqs.html
+++ b/pages/faqs.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Bebidas saludables, entrenamiento, faqs, gymbucks, salud, preguntas frecuentes">
+    <meta name="description" content="¿Tenés alguna inquietud? Ingresá aquí.">
+
     <title>Preguntas Frecuentes GYMBUCKS</title>
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/booststyle.css">
     <!-- STYLESHEET -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../sass/main.css">
 </head>
 <body>
     <header>
@@ -46,22 +49,22 @@
         <div class="container my-4">
             <div class="row">
                 <div class="col-md-12 my-5">
-                    <h1>Preguntas Frecuentes</h1>
+                    <h1>Preguntas Frecuentes Gymbucks</h1>
                 </div>
             <div class="row">
                 <div class="col-md-12">
                     <h4>¿Cómo comprar?</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos veritatis repellat et laborum sunt suscipit ut, accusantium id, corporis fugit quod consequuntur, pariatur quibusdam dolores totam cum ducimus voluptate impedit?</p>            
+                    <p>ingresá a la tienda, clickeá tu bebida preferida, completa la información, realizá el pago y retirá tu producto por cualquiera de las tiendas oficiales</p>            
                     <h4>¿Qué métodos de pago hay disponibles?</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos veritatis repellat et laborum sunt suscipit ut, accusantium id, corporis fugit quod consequuntur, pariatur quibusdam dolores totam cum ducimus voluptate impedit?</p>            
+                    <p>Paga con Mercadopago con tarjeta de crédito o débito, o puedes pagar efectivo en el local.</p>            
                     <h4>¿Puedo retirarlo directamente en el local?</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos veritatis repellat et laborum sunt suscipit ut, accusantium id, corporis fugit quod consequuntur, pariatur quibusdam dolores totam cum ducimus voluptate impedit?</p>
-                    <h4>¿Cómo comprar?</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos veritatis repellat et laborum sunt suscipit ut, accusantium id, corporis fugit quod consequuntur, pariatur quibusdam dolores totam cum ducimus voluptate impedit?</p>            
-                    <h4>¿Qué métodos de pago hay disponibles?</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos veritatis repellat et laborum sunt suscipit ut, accusantium id, corporis fugit quod consequuntur, pariatur quibusdam dolores totam cum ducimus voluptate impedit?</p>            
-                    <h4>¿Puedo retirarlo directamente en el local?</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos veritatis repellat et laborum sunt suscipit ut, accusantium id, corporis fugit quod consequuntur, pariatur quibusdam dolores totam cum ducimus voluptate impedit?</p>
+                    <p>Claro que sí, o te lo podemos enviar.</p>
+                    <h4>¿Mis compras suman puntos?</h4>
+                    <p>Sí, tus puntos serán sumados automáticamente a tu código de asociado en cada compra.</p>            
+                    <h4>¿Cómo me envian el producto?</h4>
+                    <p>Te enviamos el producto a través de Rappi.</p>            
+                    <h4>¿Si lo retiro por tienda y me doy cuenta que no me gustó la bebida que elegí?</h4>
+                    <p>Si no te gustó la bebida podes elegir hasta (1) más sin costo.</p>
                 </div>
             </div>
             </div>
