--- a/pages/shop.html
+++ b/pages/shop.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Bebidas saludables, entrenamiento, tienda, gymbucks, salud">
+    <meta name="description" content="¿Cuál es tu bebida saludable preferida? Elegí tu bebida potenciadora">
+
     <title>Tienda GYMBUCKS</title>
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/booststyle.css">
     <!-- STYLESHEET -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../sass/main.css">
 </head>
 <body>
     <header>
@@ -48,7 +51,7 @@
                     <div class="col-md-8 col-lg-6">
                             <div class="header">
                                     <h3>Productos Destacados</h3>
-                                    <h2>Elegí tu bebida potenciadora</h2>
+                                    <h1>Elegí tu bebida potenciadora</h1>
                             </div>
                     </div>
             </div>
@@ -59,9 +62,9 @@
                                 <div class="part-1">
                                 </div>
                                 <div class="part-2">
-                                        <h3 class="product-title">Lorem ipsum dolor sit.</h3>
-                                        <h4 class="product-old-price">$79.99</h4>
-                                        <h4 class="product-price">$49.99</h4>
+                                        <h3 class="product-title">Crema Verde Fit</h3>
+                                        <h4 class="product-old-price">$1100,00</h4>
+                                        <h4 class="product-price">$749,90</h4>
                                 </div>
                         </div>
                 </div>
@@ -72,8 +75,8 @@
                                         <span class="new">new</span>
                                 </div>
                                 <div class="part-2">
-                                        <h3 class="product-title">Lorem ipsum dolor sit.</h3>
-                                        <h4 class="product-price">$49.99</h4>
+                                        <h3 class="product-title">Flat Crema Canela</h3>
+                                        <h4 class="product-price">$1100,00</h4>
                                 </div>
                         </div>
                 </div>
@@ -83,9 +86,9 @@
                                 <div class="part-1">
                                 </div>
                                 <div class="part-2">
-                                        <h3 class="product-title">Lorem ipsum dolor sit.</h3>
-                                        <h4 class="product-old-price">$79.99</h4>
-                                        <h4 class="product-price">$49.99</h4>
+                                        <h3 class="product-title">Bomba Saludable</h3>
+                                        <h4 class="product-old-price">$1100,00</h4>
+                                        <h4 class="product-price">$749,90</h4>
                                 </div>
                         </div>
                 </div>
