--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Bebidas saludables, entrenamiento, alimentacion saludable, proteinas, salud, fisico">
+    <meta name="description" content="Las bebidas más saludables y deliciosas que existen en el mercado, ¡hora de potenciar tu vida y tus entrenamientos!">
+
+
     <title>GYMBUCKS</title>
     <!-- FAVICON -->
     <link rel="shortcut icon" href="./images/logoConFondo.png" type="image/x-icon">
@@ -11,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/booststyle.css">
     <!-- STYLESHEET -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./sass/main.css">
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,7 +55,7 @@
         <div class="container text-center fondo">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="text-light fw-bold my-3">EXPERIENCIA</h1>
+                    <h1 class="text-light fw-bold my-3">Bebidas saludables para potenciar tu día</h1>
                     <img src="./images/logoBlanco.png" alt="logo gymbucks" class="img-fluid my-4">
                 </div>
             </div>
@@ -60,7 +64,7 @@
     <div class="container text-center my-4">
         <div class="row my-4">
             <div class="col-md-12">
-                <h1>Elegí tu bebida favorita</h1>
+                <h2>Elegí tu bebida favorita</h2>
             </div>
         </div>
         <div class="row">
