--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Bebidas saludables, entrenamiento, contacto, gymbucks, salud">
+    <meta name="description" content="Comunicate con nosotros, estaremos encantados de responderte.">
+
     <title>Contacto GYMBUCKS</title>
     <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/booststyle.css">
     <!-- STYLESHEET -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../sass/main.css">
 </head>
 <body>
     <header>
@@ -42,7 +45,7 @@
                 </div>
         </nav>
     </header>
-    <section>
+    <section class="sectionContacto">
         <div class="container my-5">
             <div class="row">
                 <h1>Contáctanos</h1>
